--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <header class="header">
-    <img src="..//Images/White Logo.svg" class="Logo">
+    <img src="../Images/White Logo.svg" class="Logo">
 <nav class="Navbar">
     <a href="#">Projects</a>
     <a href="#">About</a>
@@ -23,7 +23,7 @@
 <section>
     <h4>Projects</h4>
     <div class="grid-container">
-        <div class="card"><img src="..//Images/Travel Portfolio Cover.png" width="420px" height="420px">
+        <div class="card"><img src="../Images/Travel Portfolio Cover.png" width="420px" height="420px">
             <p>An app that helps you find eco-friendly and sustainable modes of travel.</p>
         </div>
         <div class="card"><img src="../Images/AR Porfolio Cover.png" width="420px" height="420px">
