--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <header class="header">
-    <img src="../images/White Logo.svg" class="Logo">
+    <img src="./Images/White Logo.svg" class="Logo">
 <nav class="Navbar">
     <a href="#">Projects</a>
     <a href="#">About</a>
@@ -18,15 +18,15 @@
     <h1>Hi, I'm Shey</h1>
     <h2>I create user friendly products, user interactions & captivating stories</h2>
     <h3>Based in Toronto</h3>
-    <img src="../images/Down Arrow.svg" width="60px" height="60px" class="Arrow">
+    <img src="./Images/Down Arrow.svg" width="60px" height="60px" class="Arrow">
 </section>
 <section>
     <h4>Projects</h4>
     <div class="grid-container">
-        <div class="card"><img src="../images/Travel Portfolio Cover.png" width="420px" height="420px">
+        <div class="card"><img src="./Images/Travel Portfolio Cover.png" width="420px" height="420px">
             <p>An app that helps you find eco-friendly and sustainable modes of travel.</p>
         </div>
-        <div class="card"><img src="../images/AR Porfolio Cover.png" width="420px" height="420px">
+        <div class="card"><img src="./Images/AR Porfolio Cover.png" width="420px" height="420px">
             <p>An augmented reality app that can help you explore any city.</p>
         </div>
 </section>
