--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </header>
 <section>
     <h1>Hi, I'm Shey</h1>
-    <h2>I create user friendly products, user interactions & captivating stories</h2>
+    <p class="whoiam">I create user friendly products, user interactions & captivating stories</p>
     <h3>Based in Toronto</h3>
     <img src="./Images/Down Arrow.svg" width="60px" height="60px" class="Arrow">
 </section>
@@ -30,17 +30,36 @@
             <p>An augmented reality app that can help you explore any city.</p>
         </div>
 </section>
-<hr class="solid">
+<hr class="Firstdiv">
+<section>
+    <h5>About Me</h5>
+    <div>
+    <p class="aboutMyself">A Little About Myself</p>
+    <p class="firstParagraph">I'm a driven and skilled UX designer with a strong passion for creating exceptional user experiences. My dedication to this field is underlined by my commitment to mastering the art of designing digital interfaces that are both functional and aesthetically pleasing.<br>I pride myself on my ability to empathize with users, ensuring that every design decision is driven by their needs and preferences.</p>
+    </div>
+    <div class="secondsection">
+        <img class="Me" src="./Images/Me.png" alt="The Designer" width="450px" height="400px">
+    <div>
+        <p class="whatcanido">What Can I Do?</p>
+        <p class="secondParagraph">Throughout my journey, I have honed a diverse set of skills that enable me to deliver impactful design solutions. From conducting user research and creating user personas to wireframing, prototyping, and conducting usability testing, I am well-versed in the entire UX design lifecycle. <br>Additionally, my expertise in industry-standard design tools, such as Adobe XD, Sketch and Figma, allows me to bring my concepts to life with stunning visual representations.</p>
+    </div>
+    </div>
+    <div>
+    <p class="myInterests">My Interests</p>
+    <p class="thirdParagraph">Beyond my professional life, my interests in film, TV, and music play a significant role in shaping my creative mindset. As an avid film and TV enthusiast, I appreciate the nuances of storytelling and visual composition, which I leverage to craft compelling narratives within my designs.</p>
+    </div>
+</section>
+<hr class="Seconddiv">
 <footer>
     <div id="Text">
-        <div class="TextBox">
+        <div class="copyright">
             © 2023 Shey Naveed
         </div>
-        <div class="TextBox">
-            Contact: SheharyarNaveed@hotmail.com
+        <div class="contact">
+            Contact:<br>SheharyarNaveed@hotmail.com
         </div>
-        <div class="TextBox">
-            LinkedIn Instagram Twitter
+        <div class="socials">
+            Socials:<br>LinkedIn Instagram Twitter
         </div>
 </div>
 </footer>
